fix tag and publish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,15 +18,15 @@ jobs:
       - name: Package
         uses: actions/docker/cli@master
         with:
-          args: build -t meetup/maxmind-updater::${{ github.sha }} .
+          args: build -t meetup/maxmind-updater:${{ github.sha }} .
       # https://github.com/actions/docker/tree/master/login
-      # - name: Login
-      #   uses: actions/docker/login@master
-      #   env:
-      #     # https://help.github.com/en/articles/virtual-environments-for-github-actions#creating-and-using-secrets-encrypted-variables
-      #     DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      #     DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      # - name: Publish
-      #   uses: actions/docker/cli@master
-      #   with:
-      #     args: push meetup/maxmin-updater
+      - name: Publish Auth
+        uses: actions/docker/login@master
+        env:
+          # https://help.github.com/en/articles/virtual-environments-for-github-actions#creating-and-using-secrets-encrypted-variables
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Publish
+        uses: actions/docker/cli@master
+        with:
+          args: push meetup/maxmind-updater:${{ github.sha }}
