--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Package
         uses: actions/docker/cli@master
         with:
-          args: build -t meetup/maxmind-updater:${{ github.sha }} .
+          args: build -t ${{ github.repository }}:${{ github.sha }} .
       # https://github.com/actions/docker/tree/master/login
       - name: Publish Auth
         uses: actions/docker/login@master
@@ -29,4 +29,4 @@ jobs:
       - name: Publish
         uses: actions/docker/cli@master
         with:
-          args: push meetup/maxmind-updater:${{ github.sha }}
+          args: push ${{ github.repository }}:${{ github.sha }}
